--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "embla-carousel": "8.3.0",
     "embla-carousel-auto-scroll": "8.3.0",
-    "embla-carousel-autoplay": "^8.3.0",
     "embla-carousel-react": "^8.2.1",
     "framer-motion": "^11.5.6",
     "gsap": "^3.12.5",
@@ -34,6 +32,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/next": "^8.0.7",
     "@types/node": "^20",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18",
